# mom_assist_backend

./: .dockerignore  .env.example  .gitattributes  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: main.py
app/api/: health.py  router.py
app/core/: config.py  error_handlers.py  exceptions.py  logging.py  security.py
app/middleware/: correlation.py
app/schemas/: errors.py  knowledge_base.py  meeting.py  search.py
app/scripts/: generate_moms.py  seed_index.py  upload_to_blob.py
app/services/: agent.py  blob_storage.py  embeddings.py  llm.py  minutes_extraction.py  query_understanding.py  search_service.py  vector_store.py
app/tests/: conftest.py  test_health.py
data/json_templates/: mom_001_20230114_0930.json  mom_001_20230221_1500.json  mom_002_20230221_0930.json  mom_002_20230224_1100.json  mom_003_20230224_1100.json  mom_003_20230303_0830.json  mom_004_20230303_1500.json  mom_004_20230307_0900.json  mom_005_20230307_1430.json  mom_005_20230628_1030.json  mom_006_20230307_0900.json  mom_006_20230711_0930.json  mom_007_20230330_1000.json  mom_007_20230729_1530.json  mom_008_20230404_1530.json  mom_008_20230817_1030.json  mom_009_20230425_1430.json  mom_009_20231013_0830.json  mom_010_20230516_0900.json  mom_010_20240323_0900.json  mom_011_20230523_1500.json  mom_011_20240402_1530.json  mom_012_20230527_1430.json  mom_012_20240421_1400.json  mom_013_20230611_0830.json  mom_013_20240516_1100.json  mom_014_20230613_1430.json  mom_014_20240717_1100.json  mom_015_20230628_0930.json  (+91 more)
(+5 files in other folders)
